chore/convert-data-json (#60) (#61)
* chore/convert-data-json
- prepping for real data

* chore/convert-data-json
- updated and passing tests for componnt amends
- more components to update in renderList (not sure on the name...)
- likely more tests to update but not too much pain here

On branch chore/convert-data-json
Changes to be committed:
modified:   eslint.config.js
new file:   public/css/components.css
modified:   public/css/global.css
modified:   src/components/organisms/Banner/Banner.test.jsx
modified:   src/components/organisms/Banner/__snapshots__/Banner.test.jsx.snap
modified:   src/components/organisms/Banner/index.tsx
modified:   src/data/pages/maintenanceMode.json
modified:   src/helpers/layouts.tsx
modified:   src/helpers/parsers.ts
modified:   src/helpers/renderList.tsx
modified:   src/index.tsx
modified:   src/types/branding.ts

* chore/convert-data-json

On branch chore/convert-data-json
Changes to be committed:
modified:   src/components/atoms/Content/Content.test.jsx
modified:   src/components/atoms/Content/index.tsx
modified:   src/components/molecules/Socials/style.css
modified:   src/components/organisms/Banner/__snapshots__/Banner.test.jsx.snap
modified:   src/components/organisms/Banner/index.tsx
modified:   src/components/organisms/Footer/index.tsx
modified:   src/components/organisms/Footer/style.css
modified:   src/components/organisms/Header/index.tsx
deleted:    src/data/pages/about.data.tsx
new file:   src/data/pages/about.json
deleted:    src/data/pages/blog.data.tsx
new file:   src/data/pages/blog.json
deleted:    src/data/pages/contact.data.tsx
new file:   src/data/pages/contact.json
deleted:    src/data/pages/home.data.tsx
new file:   src/data/pages/home.json
modified:   src/data/pages/index.ts
modified:   src/data/pages/maintenanceMode.json
deleted:    src/data/pages/notfound.data.tsx
new file:   src/data/pages/notfound.json
modified:   src/data/routes.tsx
modified:   src/helpers/renderList.tsx

---------

Co-authored-by: Kurtis

--- a/src/components/molecules/Socials/style.css
+++ b/src/components/molecules/Socials/style.css
@@ -1,12 +1,12 @@
 nav.socials a {
   display: flex;
-  color: var(--brand-white);
+  color: currentColor;
   outline: 2px solid transparent;
 }
 
 nav.socials a:focus {
   outline: 2px solid white;
-  background: var(--brand-black);
+  background: yellow;
 }
 
 nav.socials ul {
@@ -15,5 +15,6 @@ nav.socials ul {
 }
 
 nav.socials a:hover {
-  filter: drop-shadow(2px 2px 2px currentColor);
+  filter: invert(1);
+  background: yellow;
 }
