feature/page-layout-improvements (#62)
* feature/page-layout-improvements

* feature/page-layout-improvements
On branch feature/page-layout-improvements
Changes to be committed:
new file:   public/KurtisRogersCV.pdf
modified:   public/css/branding.css
modified:   public/css/components.css
modified:   src/components/atoms/Content/style.css
modified:   src/components/organisms/Banner/__snapshots__/Banner.test.jsx.snap
modified:   src/components/organisms/Banner/style.css
modified:   src/data/pages/about.json
modified:   src/data/pages/notfound.json
modified:   src/helpers/renderList.tsx

* Completed major content updates

On branch feature/page-layout-improvements
Changes to be committed:
modified:   public/css/branding.css
modified:   public/css/variables.css
modified:   src/components/atoms/Content/style.css
modified:   src/components/organisms/Banner/style.css
modified:   src/data/pages/about.json
modified:   src/data/pages/blog.json
modified:   src/data/pages/contact.json
modified:   src/data/pages/home.json

---------

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -8,14 +8,14 @@
 
   /* brand colours */
   --brand-red: #96031A;
-  --brand-black: #1B1B1E;
+  --brand-black: #171717;
   --brand-grey: #6D676E;
   --brand-white: #FBFFFE;
   --brand-yellow: #FAA916;
 
   /* gradients */
   --brand-primary-gradient: linear-gradient(-45deg, var(--brand-black), var(--brand-red), var(--brand-yellow), var(--brand-white));
-  --brand-secondary-gradient: linear-gradient(-45deg, var(--brand-black), var(--brand-white), var(--brand-black));
+  --brand-secondary-gradient: linear-gradient(180deg, var(--brand-black), var(--brand-white));
 
   /* focus colour */
   --a11y-focus-yellow: yellow;
