--- a/public/css/branding.css
+++ b/public/css/branding.css
@@ -62,7 +62,6 @@ h3,
 h4,
 h5 {
   font-family: var(--heading-font);
-  line-height: 1;
   word-wrap: break-word;
   margin: 0px;
 }
@@ -71,7 +70,6 @@ h1,
 .text-size-h1 {
   margin-top: 0;
   font-size: var(--text-size-2xl);
-  line-height: 1;
   font-weight: normal;
 }
 
@@ -86,7 +84,6 @@ h2,
 .text-size-h2 {
   font-size: var(--text-size-xl);
   font-weight: normal;
-  line-height: 1;
 }
 
 @media screen and (min-width: 480px) {
@@ -100,7 +97,6 @@ h3,
 .text-size-h3 {
   font-size: var(--text-size-lg);
   font-weight: normal;
-  line-height: 1;
 }
 
 @media screen and (min-width: 480px) {
@@ -114,14 +110,12 @@ h4,
 .text-size-h4 {
   font-size: var(--text-size-xl);
   font-weight: normal;
-  line-height: 1;
 }
 
 h5,
 .text-size-h5 {
   font-size: var(--text-size-lg);
   font-weight: normal;
-  line-height: 1;
 }
 
 .text-caption {
@@ -211,4 +205,13 @@ button:before,
 button.btn:before {
   left: 0px;
   top: 0px;
+}
+
+p {
+  margin-block-start: 0px;
+  margin-block-end: 1rem;
+}
+
+p:only-of-type {
+  margin-block-end: 0px;
 }
