Feature/page improvements (#65)
* fix/download-link (#64)

- needed to add correct links for files
- a bunch of other improvements
- added animation to the banner elements
- updated robots.txt
- branding css updated
- button updated to show links instead if behaving like a link (accessibility)
- changed loog so it didn't look like a button
- skip link updated - removed margin
- banner clutter removed, tidied up classes and removed conditional classes
- slight change to the footer navigation links - smaller margin
- main navigation improvements
- updated all page content
- using hgroups in the banner now
- added a new credit section to the image data

On branch fix/download-link
Changes to be committed:
modified:   public/css/animations.css
modified:   public/css/branding.css
modified:   public/robots.txt
modified:   src/components/atoms/Button/Button.test.jsx
modified:   src/components/atoms/Button/index.tsx
modified:   src/components/atoms/Logo/style.css
modified:   src/components/atoms/Skiplink/style.css
modified:   src/components/organisms/Banner/Banner.test.jsx
modified:   src/components/organisms/Banner/__snapshots__/Banner.test.jsx.snap
modified:   src/components/organisms/Banner/index.tsx
modified:   src/components/organisms/Banner/style.css
modified:   src/components/organisms/Footer/style.css
modified:   src/components/organisms/Header/index.tsx
modified:   src/components/organisms/Header/style.css
modified:   src/data/pages/about.json
modified:   src/data/pages/blog.json
modified:   src/data/pages/contact.json
modified:   src/data/pages/home.json
modified:   src/data/pages/notfound.json
modified:   src/helpers/renderList.tsx
modified:   src/helpers/responsiveImages.tsx
modified:   src/types/branding.ts
modified:   vite.config.js

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

* feature/page-improvements
On branch feature/page-improvements
Changes to be committed:
modified:   index.html
deleted:    public/KurtisRogersCV.pdf
modified:   public/css/ani

--- a/public/css/branding.css
+++ b/public/css/branding.css
@@ -6,6 +6,7 @@ html, body {
 
 * {
   font-size: 16px;
+  line-height: normal;
 }
 
 .bg-red {
@@ -52,8 +53,6 @@ html, body {
 
 body {
   font-family: var(--normal-font);
-  font-weight: false;
-  word-break: all;
 }
 
 h1,
@@ -128,6 +127,11 @@ small,
 }
 
 /* links */
+a:focus-visible:not(.logo):not(button):not(.btn) {
+  outline-offset: 2px;
+  border: 2px solid var(--brand-black);
+}
+
 a:focus-visible,
 button:focus-visible {
   outline-color: var(--brand-white);
@@ -198,6 +202,10 @@ a.btn--outline:before {
   width: 5px;
   border-top: 2px solid;
   border-left: 2px solid;
+}
+
+a:not(.btn):not(.logo) {
+  padding: 0.125rem;
 }
 
 a.btn:before,
