--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -1,13 +1,13 @@
-@keyframes slidein {
+@keyframes slideIn {
   0% {
-    height: 0%;
+    line-height: 0;
   }
   100% {
-    height: 100%;
+    line-height: 1.5;
   }
 }
 
-@keyframes fadein {
+@keyframes fadeIn {
   0% {
     opacity: 0;
   }
@@ -26,4 +26,42 @@
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+@keyframes fadeInUp {
+  0% {
+    transform: translateY(20%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    transform: translateY(-20%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+.fade--in {
+  animation: var(--transition) fadeIn;
+}
+
+.fade--in_up {
+  animation: var(--transition) fadeInUp;
+}
+
+.fade--in_down {
+  animation: var(--transition) fadeInDown;
+}
+
+.slide--in {
+  animation: var(--transition) slideIn;
 }
