--- a/src/components/organisms/Header/style.css
+++ b/src/components/organisms/Header/style.css
@@ -7,9 +7,10 @@ header {
   position: sticky;
   top: 0px;
   background: var(--brand-black);
-  background-color: rgb(0 0 0 / 30%);
+  background-color: rgb(0 0 0 / 70%);
   backdrop-filter: blur(8px);
   padding: 1rem 0px;
+  overflow: hidden;
 }
 
 header > .content {
@@ -20,31 +21,47 @@ header > .content {
   max-width: var(--brand-base-grid);
   margin: 0px 1rem;
   padding: 1rem;
-  background: var(--brand-white);
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  background: var(--brand-red);
 }
 
 header nav.site-navigation > ul {
+  position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 0px;
-  margin: 0px 1rem 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  overflow-x: auto;
+}
+
+header nav.site-navigation > ul:before {
+  left: 0px;
+  background: linear-gradient(to right, var(--brand-black), transparent);
+}
+
+header nav.site-navigation > ul:after {
+  right: 0px;
+  background: linear-gradient(to left, var(--brand-black), transparent);
+}
+
+header nav.site-navigation > ul:after,
+header nav.site-navigation > ul:before {
+  content: "";
+  position: fixed;
+  height: 100%;
+  top: 0px;
+  bottom: 0px;
+  width: 1rem;
+}
+
+header nav.site-navigation li:last-of-type {
+  margin-right: 0px;
 }
 
 header nav.site-navigation li {
   display: block;
   list-style-type: none;
+  margin-right: 1rem;
 }
 
 header nav.site-navigation li > a {
@@ -63,6 +80,22 @@ header nav.site-navigation a {
 
 header nav.site-navigation a:hover {
   text-decoration: underline;
+}
+
+@media screen and (min-width: 1024px) {
+  header nav.site-navigation {
+    width: calc(100% - 2rem);
+    max-width: var(--brand-base-grid);
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  header nav.site-navigation > ul {
+    justify-content: end;
+    padding-right: 0px;
+  }
 }
 
 @media screen and (min-width: 1320px) {
