fix/homepage-content (#67)
* RC3.1.0 (#62) (#63)

* feature/page-layout-improvements

* feature/page-layout-improvements
On branch feature/page-layout-improvements
Changes to be committed:
new file:   public/KurtisRogersCV.pdf
modified:   public/css/branding.css
modified:   public/css/components.css
modified:   src/components/atoms/Content/style.css
modified:   src/components/organisms/Banner/__snapshots__/Banner.test.jsx.snap
modified:   src/components/organisms/Banner/style.css
modified:   src/data/pages/about.json
modified:   src/data/pages/notfound.json
modified:   src/helpers/renderList.tsx

* Completed major content updates

On branch feature/page-layout-improvements
Changes to be committed:
modified:   public/css/branding.css
modified:   public/css/variables.css
modified:   src/components/atoms/Content/style.css
modified:   src/components/organisms/Banner/style.css
modified:   src/data/pages/about.json
modified:   src/data/pages/blog.json
modified:   src/data/pages/contact.json
modified:   src/data/pages/home.json

---------

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

* RC3.2.0 (#66)

* feature/page-layout-improvements (#62)

* feature/page-layout-improvements

* feature/page-layout-improvements
On branch feature/page-layout-improvements
Changes to be committed:
new file:   public/KurtisRogersCV.pdf
modified:   public/css/branding.css
modified:   public/css/components.css
modified:   src/components/atoms/Content/style.css
modified:   src/components/organisms/Banner/__snapshots__/Banner.test.jsx.snap
modified:   src/components/organisms/Banner/style.css
modified:   src/data/pages/about.json
modified:   src/data/pages/notfound.json
modified:   src/helpers/renderList.tsx

* Completed major content updates

On branch feature/page-layout-improvements
Changes to be committed:
modified:   public/css/branding.css
modified:   public/css/variables.css
modified:   src/components/atoms/Content/style.css
modified:   src/components/organisms/Banner/style.css
mod

--- a/src/components/organisms/Banner/style.css
+++ b/src/components/organisms/Banner/style.css
@@ -58,11 +58,33 @@
   box-shadow: 1px, 1px, 1px solid black;
 }
 
-.banner__content--image {
-  width: 100%;
-  grid-column: span 8;
-  align-self: stretch;
-  aspect-ratio: 2/1.5;
+.banner__content--image .credit {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.25rem;
+  position: absolute;
+  width: calc(100% - 2rem);
+  top: 0px;
+  bottom: auto;
+  left: 0px;
+  padding: 1rem;
+  background: linear-gradient(to top, transparent, black);
+  z-index: 10;
+}
+
+.banner__content--image .credit > span {
+  display: none;
+}
+
+.banner__content--image .credit > span,
+.banner__content--image .credit > a {
+  font-size: 0.75rem;
+  text-align: end;
+}
+
+.banner__content--image .credit > a {
+  margin-right: .5rem;
 }
 
 @media screen and (min-width: 1024px) {
