--- a/src/components/organisms/Header/style.css
+++ b/src/components/organisms/Header/style.css
@@ -82,6 +82,13 @@ header nav.site-navigation a:hover {
   text-decoration: underline;
 }
 
+@media screen and (min-width: 768px) {
+  header nav.site-navigation > ul:after,
+  header nav.site-navigation > ul:before {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   header nav.site-navigation {
     width: calc(100% - 2rem);
