chore/general-improvements (#76)
* chore/general-improvements
- made a change to the workflows, removed unnecessary processes
- updated packages
- hover states needed doing - gone for a quick, lazy option for now
- added github link to the footer
- updated tests
- button component no longer adding unnecessary attributes to links or buttons

On branch chore/general-improvements
Changes to be committed:
modified:   .github/workflows/node.js.yml
modified:   .yarn/install-state.gz
modified:   package.json
modified:   public/css/branding.css
modified:   public/css/components.css
modified:   public/css/variables.css
modified:   src/components/atoms/Button/Button.test.jsx
modified:   src/components/atoms/Button/index.tsx
modified:   src/components/molecules/Socials/index.tsx
modified:   src/components/molecules/Socials/style.css
modified:   src/components/organisms/Banner/__snapshots__/Banner.test.jsx.snap
modified:   src/components/organisms/Footer/Footer.test.jsx
modified:   src/components/organisms/Footer/index.tsx
modified:   src/components/organisms/Footer/style.css
modified:   src/components/organisms/Header/style.css
modified:   src/data/icons/index.ts
modified:   src/data/pages/about.json
modified:   src/data/pages/blog.json
modified:   src/data/pages/contact.json
modified:   src/data/pages/home.json
modified:   src/data/pages/notfound.json
modified:   src/helpers/layouts.tsx
modified:   src/helpers/renderList.tsx

* Baking th css further
- removed transition and repeated styles

---------

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -1,5 +1,14 @@
 .buttongroup {
+  width: 100%;
+  display: block;
   margin: 1rem 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+.buttongroup li {
+  display: inline-flex;
+  word-break: break-all;
 }
 
 .buttongroup button,
