--- a/src/components/molecules/Socials/style.css
+++ b/src/components/molecules/Socials/style.css
@@ -6,15 +6,14 @@ nav.socials a {
 
 nav.socials a:focus {
   outline: 2px solid white;
-  background: yellow;
+  background: var(--a11y-focus-yellow);
+}
+
+nav.socials li:not(:first-of-type) {
+  margin-left: 0.5rem;
 }
 
 nav.socials ul {
   padding: 0px;
   list-style-type: none;
-}
-
-nav.socials a:hover {
-  filter: invert(1);
-  background: yellow;
 }
