chore/content-layout-amends (#82)
Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,6 +1,6 @@
+@import "variables.css";
 @import "animations.css";
 @import "fonts.css";
-@import "variables.css";
-@import "branding.css";
+@import "theme.css";
 @import "components.css";
 
