chore/test-file-typescript-alignment (#88)
* chore/test-amends
- also fixed parent-section and child-section logic
- gutted some css
- converting the jsx text files to tsx

On branch chore/test-amends
Changes to be committed:
modified:   public/css/theme.css
renamed:    src/components/atoms/Button/Button.test.jsx -> src/components/atoms/Button/Button.test.tsx
modified:   src/components/atoms/Button/index.tsx
deleted:    src/components/atoms/CSSFilterPanel/CSSFilterPanel.stories.jsx
deleted:    src/components/atoms/CSSFilterPanel/CSSFilterPanel.test.jsx
deleted:    src/components/atoms/CSSFilterPanel/index.tsx
deleted:    src/components/atoms/CSSFilterPanel/style.css
renamed:    src/components/atoms/Content/Content.test.jsx -> src/components/atoms/Content/Content.test.tsx
modified:   src/components/atoms/Content/index.tsx
renamed:    src/components/atoms/Icon/Icon.test.jsx -> src/components/atoms/Icon/Icon.test.tsx
renamed:    src/components/atoms/Logo/Logo.test.jsx -> src/components/atoms/Logo/Logo.test.tsx
renamed:    src/components/atoms/Skiplink/Skiplink.test.jsx -> src/components/atoms/Skiplink/Skiplink.test.tsx
modified:   src/components/atoms/Skiplink/index.tsx
renamed:    src/components/molecules/Navigation/Navigation.test.jsx -> src/components/molecules/Navigation/Navigation.test.tsx
new file:   src/components/molecules/Socials/Socials.test.tsx
deleted:    src/components/organisms/Banner/Banner.test.jsx
new file:   src/components/organisms/Banner/Banner.test.tsx
new file:   src/components/organisms/Banner/__snapshots__/Banner.test.tsx.snap
modified:   src/components/organisms/Banner/index.tsx
modified:   src/components/organisms/Banner/style.css
modified:   src/components/organisms/Footer/Footer.test.jsx
modified:   src/components/organisms/Footer/__snapshots__/Footer.test.jsx.snap
modified:   src/components/organisms/Header/Header.test.jsx
modified:   src/helpers/layouts.tsx

* Finished updating the tests to TS
On branch chore/test-amends
Changes to be comm

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -4,8 +4,19 @@ html {
 
 html, body {
   background: var(--brand-black);
+  color: var(--brand-white);
   margin: 0px;
   scroll-behavior: smooth;
+}
+
+body {
+  font-family: var(--normal-font);
+  font-size: var(--text-base);
+
+  /* Smoothing */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 * {
@@ -50,18 +61,6 @@ html, body {
 
 .text-yellow {
   color: var(--brand-yellow);
-}
-
-/* text */
-
-body {
-  font-family: var(--normal-font);
-  font-size: var(--text-base);
-
-  /* Smoothing */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
 }
 
 h1,
@@ -121,9 +120,7 @@ button:hover {
 }
 
 a:focus-visible,
-button:focus-visible,
-a:focus,
-button:focus {
+button:focus-visible {
   outline-offset: 2px;
   outline-width: 2px;
   outline-color: var(--brand-black);
